SERVER-97044 Make sure that change streams do not output an event for _shardsvrDropCollectionIfUUIDNotMatching command performed during resharding cleanup (#29761)

GitOrigin-RevId: 5239df61715616a5ac358f2723581e13238b1a81