src/mongo/db/catalog/drop_collection.cpp
@@ -593,7 +593,8 @@ Status dropCollection(OperationContext* opCtx,
 
 Status dropCollectionIfUUIDNotMatching(OperationContext* opCtx,
                                        const NamespaceString& ns,
-                                       const UUID& expectedUUID) {
+                                       const UUID& expectedUUID,
+                                       bool fromMigrate) {
     AutoGetDb autoDb(opCtx, ns.dbName(), MODE_IX);
     if (autoDb.getDb()) {
         {
@@ -610,7 +611,7 @@ Status dropCollectionIfUUIDNotMatching(OperationContext* opCtx,
                                boost::none,
                                &repl,
                                DropCollectionSystemCollectionMode::kDisallowSystemCollectionDrops,
-                               false /*fromMigrate*/,
+                               fromMigrate,
                                expectedUUID);
     }
 
