src/mongo/db/s/shardsvr_drop_collection_if_uuid_not_matching_command.cpp
@@ -85,7 +85,7 @@ public:
             opCtx->setAlwaysInterruptAtStepDownOrUp_UNSAFE();
 
             uassertStatusOK(dropCollectionIfUUIDNotMatching(
-                opCtx, ns(), request().getExpectedCollectionUUID()));
+                opCtx, ns(), request().getExpectedCollectionUUID(), true /* fromMigrate */));
         }
 
     private:
